--- a/src/components/ChatWindow/style.css
+++ b/src/components/ChatWindow/style.css
@@ -53,7 +53,12 @@ div.chat-window div.header div.header-actions ul li {
 }
 
 div.chat-window div.content {
-
+  flex: 1;
+  overflow-y: auto;
+  background-color: #E5DDD5;
+  background-size: cover;
+  background-position: center;
+  background-image: url('https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png');
 }
 
 div.chat-window div.footer {
