Sistema de icones funcionando e capturando audio do navegador para ser transcrito em texto

--- a/src/components/ChatWindow/style.css
+++ b/src/components/ChatWindow/style.css
@@ -57,10 +57,76 @@ div.chat-window div.content {
   overflow-y: auto;
   background-color: #E5DDD5;
   background-size: cover;
-  background-position: center;
+  background-position: top;
   background-image: url('https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png');
 }
 
+div.chat-window div.emoji-area {
+  height: 250px;
+  overflow-y: hidden;
+  transition: all ease 0.3s;
+}
+
+div.chat-window div.emoji-area aside.emoji-picker-react {
+  width: auto;
+  background: none;
+}
+
+div.chat-window div.emoji-area aside.emoji-picker-react ul.emoji-group:before {
+  background: none;
+}
+
 div.chat-window div.footer {
-  
+  height: 62px;
+  display: flex;
+  align-items: center;
+}
+
+div.chat-window div.footer div.list-emoji {
+  display: flex;
+  margin: 0 15px;
+}
+
+div.chat-window div.footer div.list-emoji div.emoji {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  overflow: hidden;
+  transition: all ease 0.3s;
+} 
+
+div.chat-window div.footer div.input {
+  flex: 1;
+}
+
+div.chat-window div.footer div.input input {
+  width: 100%;
+  height: 40px;
+  border: 0;
+  outline: 0;
+  background-color: #FFF;
+  border-radius: 20px;
+  font-size: 15px;
+  color: #4A4A4A;
+  padding-left: 15px;
+}
+
+div.chat-window div.footer div.action {
+  display: flex;
+  margin: 0 15px;
+}
+
+div.chat-window div.footer div.action div.button{
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  overflow: hidden;
 }
